--- a/remote_source/build.gradle
+++ b/remote_source/build.gradle
@@ -35,6 +35,7 @@ dependencies {
 
     api('com.squareup.retrofit2:retrofit:2.9.0')
     api("com.squareup.moshi:moshi-kotlin:1.13.0")
+    api("com.squareup.moshi:moshi-adapters:1.12.0")
     api('com.squareup.retrofit2:converter-moshi:2.9.0')
     api('com.squareup.okhttp3:logging-interceptor:4.9.1')
 
