--- a/remote_source/build.gradle
+++ b/remote_source/build.gradle
@@ -31,6 +31,8 @@ android {
 }
 
 dependencies {
+    implementation project(":data")
+
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.6.1'
 
     api('com.squareup.retrofit2:retrofit:2.9.0')
