--- a/data/build.gradle
+++ b/data/build.gradle
@@ -32,6 +32,7 @@ android {
 }
 
 dependencies {
+    implementation project(":domain")
 
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.6.1'
 
