--- a/app/build.gradle
+++ b/app/build.gradle
@@ -38,6 +38,10 @@ android {
 
 dependencies {
 
+    implementation project(":domain")
+    implementation project(":data")
+    implementation project(":remote_source")
+
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.6.1'
 
     implementation 'androidx.core:core-ktx:1.8.0'
@@ -52,8 +56,8 @@ dependencies {
     implementation "androidx.browser:browser:1.4.0"
 
     implementation("com.google.dagger:hilt-android:2.42")
-    implementation("androidx.hilt:hilt-navigation-compose:1.0.0")
     kapt("com.google.dagger:hilt-android-compiler:2.42")
+    kapt "androidx.hilt:hilt-compiler:1.0.0"
 
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
